--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     // ====== 2) PRODUCT LIST (Gujarati) ======
     const PRODUCTS = [
       "ગોલ્ડ 500 ML", "ચાઇ માઝા 500 ML", "T સ્પે 1 LTR", "છાસ 300 ML", "છાસ 680 ML",
-      "દહીં 850 GM", "મસ્તી 1 KG", "મસ્તી 200 GM", "મસ્તી 85 GM", "મસ્તી 5 KG", "ગોલ્ડ 6 LTR"
+      "દહીં 850 GM", "મસ્તી 1 KG", "મસ્તી 200 GM", "મસ્તી 85 GM", "મસ્તી 5 KG", "ગોલ્ડ 6 LTR", "છાસ 6 LTR",
     ];
 
     // ====== 3) FIREBASE (Web v11+ Modular via CDN) ======
