--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
     <div class="card">
       <div class="header">
         <div>
-          <h1>SHREE SHAKTI AMUL STOCK</h1>
+          <h1>SHREE SHAKTI
+            AMUL STOCK</h1>
           <div class="status" id="status">લોડ થઈ રહ્યું છે…</div>
         </div>
         <div style="text-align:right">
