--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     .title-group h1 {
       margin: 0;
       font-size: 20px;
-      color: var(--text);
+      color: var(--danger);
       font-weight: 700;
       line-height: 1.2;
     }
